Pass data 2 ways: assigning a function and using a Closure

--- a/ReusablePopups/Base.lproj/Main.storyboard
+++ b/ReusablePopups/Base.lproj/Main.storyboard
@@ -27,7 +27,7 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                 <state key="normal" title="Select Date"/>
                                 <connections>
-                                    <segue destination="qBY-Wh-LRA" kind="show" id="nOU-Kl-n4B"/>
+                                    <segue destination="qBY-Wh-LRA" kind="show" identifier="toDatePopupViewControllerSegue" id="nOU-Kl-n4B"/>
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="VC2" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dq7-YW-SWa">
@@ -40,15 +40,23 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Callbacks" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bNr-xs-Qqi">
+                                <rect key="frame" x="114.5" y="312" width="146.5" height="42"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="35"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="iBV-MC-ecs" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="ZRF-F4-7ta" secondAttribute="leading" constant="20" symbolic="YES" id="2ys-k5-d8a"/>
+                            <constraint firstItem="bNr-xs-Qqi" firstAttribute="centerY" secondItem="ZRF-F4-7ta" secondAttribute="centerY" id="4ig-kd-gW6"/>
                             <constraint firstItem="Zk3-Ul-qYN" firstAttribute="trailing" secondItem="iBV-MC-ecs" secondAttribute="trailing" constant="16" id="Hmk-Va-3GX"/>
                             <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="dq7-YW-SWa" secondAttribute="trailing" constant="20" symbolic="YES" id="ILb-K8-a4w"/>
                             <constraint firstItem="dq7-YW-SWa" firstAttribute="top" secondItem="Zk3-Ul-qYN" secondAttribute="top" constant="16" id="JGz-Ag-qgF"/>
                             <constraint firstItem="dq7-YW-SWa" firstAttribute="leading" secondItem="Zk3-Ul-qYN" secondAttribute="leading" constant="16" id="RW4-h1-4ps"/>
                             <constraint firstItem="iBV-MC-ecs" firstAttribute="top" secondItem="Zk3-Ul-qYN" secondAttribute="top" constant="16" id="qYL-oS-ZOm"/>
+                            <constraint firstItem="bNr-xs-Qqi" firstAttribute="centerX" secondItem="ZRF-F4-7ta" secondAttribute="centerX" id="wlk-ZU-KQ6"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="Zk3-Ul-qYN"/>
                     </view>
@@ -79,15 +87,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="VC1" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6IG-Vr-MU7">
-                                <rect key="frame" x="16" y="36" width="45.5" height="39"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="39" id="sa0-tN-sjz"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="AR0-BE-ZfS">
                                 <rect key="frame" x="234" y="36" width="125" height="30"/>
                                 <constraints>
@@ -99,10 +98,27 @@
                                     <segue destination="qBY-Wh-LRA" kind="show" identifier="toDatePopupViewControllerSegue" id="hR0-ZA-ouK"/>
                                 </connections>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="VC1" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6IG-Vr-MU7">
+                                <rect key="frame" x="16" y="36" width="45.5" height="39"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="39" id="sa0-tN-sjz"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Notification" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="g4i-aO-qJi">
+                                <rect key="frame" x="101.5" y="312" width="173" height="42"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="35"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="6IG-Vr-MU7" secondAttribute="trailing" constant="20" symbolic="YES" id="AmO-WA-LCc"/>
+                            <constraint firstItem="g4i-aO-qJi" firstAttribute="centerX" secondItem="Tj1-hq-zjd" secondAttribute="centerX" id="He3-Ma-mz6"/>
+                            <constraint firstItem="g4i-aO-qJi" firstAttribute="centerY" secondItem="Tj1-hq-zjd" secondAttribute="centerY" id="MaV-3e-j1y"/>
                             <constraint firstItem="AR0-BE-ZfS" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="Tj1-hq-zjd" secondAttribute="leading" constant="20" symbolic="YES" id="aHn-nN-QaQ"/>
                             <constraint firstItem="6IG-Vr-MU7" firstAttribute="leading" secondItem="pNO-MX-XpX" secondAttribute="leading" constant="16" id="din-QY-aJ9"/>
                             <constraint firstItem="AR0-BE-ZfS" firstAttribute="top" secondItem="pNO-MX-XpX" secondAttribute="top" constant="16" id="oqB-2n-aSa"/>
