--- a/ReusablePopups/SelectTime.storyboard
+++ b/ReusablePopups/SelectTime.storyboard
@@ -18,6 +18,16 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="VC3" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="f2P-CC-MYt">
+                                <rect key="frame" x="16" y="36" width="109" height="39"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="109" id="Ubs-Y7-fde"/>
+                                    <constraint firstAttribute="height" constant="39" id="f0s-Qc-bva"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uqY-T2-L3w">
                                 <rect key="frame" x="229" y="36" width="130" height="30"/>
                                 <constraints>
@@ -30,13 +40,9 @@
                                     <action selector="selectTimeButtonTapped:" destination="wlv-NG-vIx" eventType="touchUpInside" id="uJt-JA-TGJ"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="VC3" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="f2P-CC-MYt">
-                                <rect key="frame" x="16" y="36" width="109" height="39"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="109" id="Ubs-Y7-fde"/>
-                                    <constraint firstAttribute="height" constant="39" id="f0s-Qc-bva"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Delegates" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Mcc-sH-JeH">
+                                <rect key="frame" x="122.5" y="315.5" width="130" height="36"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
@@ -47,6 +53,8 @@
                             <constraint firstItem="uqY-T2-L3w" firstAttribute="top" secondItem="ZR4-4j-7zJ" secondAttribute="top" constant="16" id="Mt9-dD-2hd"/>
                             <constraint firstItem="f2P-CC-MYt" firstAttribute="top" secondItem="ZR4-4j-7zJ" secondAttribute="top" constant="16" id="Upg-K2-m0r"/>
                             <constraint firstItem="ZR4-4j-7zJ" firstAttribute="trailing" secondItem="uqY-T2-L3w" secondAttribute="trailing" constant="16" id="ql0-zb-4jR"/>
+                            <constraint firstItem="Mcc-sH-JeH" firstAttribute="centerY" secondItem="gHA-wf-Ekz" secondAttribute="centerY" id="uuf-CA-CEv"/>
+                            <constraint firstItem="Mcc-sH-JeH" firstAttribute="centerX" secondItem="gHA-wf-Ekz" secondAttribute="centerX" id="ymY-4K-WLe"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="ZR4-4j-7zJ"/>
                     </view>
